--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,159 +1,7 @@
 
 body{
       background-color: #118AB2;  
-      transition: background 1s ease;
-     /*background-color: #2a9d8f;  */
-     /* background-color: #ef476f;  */
 }
-
-.content {
-  display: table;
-  height: 100%;
-  width: 100%;
-}
-
-* {
-  box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-
-
-.navbar{
-    background-color: #073B4C !important;
-}
-
-.nav-link:link, .nav-link:visited{
-    color: #fff !important;
-}
-
-.nav-link:hover, .nav-link:active{
-    color: #06D6A0 !important; 
-}
-
-.carousel-item{
-    width: 100%;
-    /* height: 300px; */
-    height: 400px;
-
-}
-
-@media (max-width: 600px){
-    .carousel-item{
-        height: 280px;
-    }
-}
-
-@media (min-width: 1600px){
-  .centrar{
-    display: flex;
-    justify-content: center;
-  }
-}
-
-
-
-#ojo, #ojo2{
-  cursor: pointer;
-  width: 40px;
-  padding-left: 1px;
-}
-
-#mail{
-  width: 40px;
-  padding-left: 5px;
-}
-
-.publicacion-title{
-    text-align: center !important;
-    padding-bottom: 10px !important;
-    color: white!important; 
-    /* color: #000 !important; */
-}
-
-.title{
-    text-align: center;
-    padding-bottom: 10px;
-}
-
-.form-container{
-    background: #fff;
-    padding: 30px;
-    margin-top: 10vh;
-    margin-bottom: 5vh;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px #000;
-}
-
-.form-container2{
-    background: #fff;
-    padding: 30px;
-    margin-top: 5vh;
-    margin-bottom: 5vh;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px #000;
-}
-
-.btn{
-    background: #118AB2;
-}
-
-.menu__option {
-    width: 50%;
-    height: 50%;
-    margin-bottom: 20px;
-    font-size: 15px;
-    padding: 15px;
-    position: relative;
-    border: 1px solid #f2f2f2;
-    background-color: #f2f2f2;
-    box-shadow: 0px 0px 10px 0px #000;
-    color: #000;
-    text-align: center;
-    border-radius: 10px;
-    max-width: 180px;
-    height: 180px;
-    text-decoration: none;
-    margin: auto;
-    font-weight: 500;
-    
-}
-
-.menu__option:hover {
-    background-color: #fff;
-    border: 1px solid #fff;
-    box-shadow: 0px 0px 10px 0px #fff;
-    color: #000;
-    text-decoration: none;
-}
-
-.main-menu__options {
-    margin: 40px 0 60px;
-    display: flex;
-    flex-wrap: wrap;
-    -webkit-box-pack: center;
-    justify-content: center;
-    align-content: stretch;
-    font-weight: 700;
-    margin: 20px 0 30px;
-}
-
-.option__image {
-    width: 50%;
-    margin-bottom: 5px;
-    display: block;
-    min-height: 75px;
-    margin: 0 auto 20px;
-}
-
- .comentarios{
-  color: #118AB2 !important;
-   
- }
-
- a{
-   color: #000;
- }
 
  .form-calendar-container{
   background: #fff;
@@ -164,35 +12,7 @@ body{
   box-shadow: 0px 0px 10px 0px #000;
 }
 
-.img-info{
-  display:block;
-  margin:auto;
-}
-
-.h2-titulos{
-  color: #06D6A0;
-  font-weight: bold;
-  text-align: center;
-  font-size: 30px;
-}
-
-.h3-Subtitulos{
-  color: #118AB2;
-  font-weight: bold;
-  text-align: center;
-  font-size: 23px;
-}
-
-.parrafo-Subtitulos{
-  color:#073B4C;
-  text-align: center;
-  font-size: 17px;
-}
-
-.footer-p{
-  text-align: center;
-}
-
-.btnFooter{
-  color: #fff;
+#map{
+  width: 400px;
+  height: 300px;
 }
