--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 
 body{
-      background-color: #118AB2;  
+      background-color: #fff;  
 }
 
  .form-calendar-container{
@@ -13,6 +13,6 @@ body{
 }
 
 #map{
-  width: 400px;
-  height: 300px;
+  width: 100%;
+  height: 500px;
 }
