--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,18 +1,43 @@
 
 body{
-      background-color: #fff;  
+      /* background-color: #fff; */
+      background-color: #118ab2; 
 }
 
- .form-calendar-container{
+/*  .form-calendar-container{
   background: #fff;
   padding: 35px;
   margin-top: 3vh;
   margin-bottom: 5vh;
   border-radius: 10px;
   box-shadow: 0px 0px 10px 0px #000;
-}
+} */
 
 #map{
   width: 100%;
   height: 500px;
+}
+
+#lienzo{
+  display: flex;
+  justify-content: center;
+}
+
+h1{
+  padding-top: 20px;
+  text-align: center;
+/*   color: #06d6a0;*/  
+  color: #fff;
+  font-size: 40px;
+}
+
+#municipiotxt{
+  color: #fff;
+  font-size: 20px;
+
+}
+
+.grafica{
+  display: flex;
+  justify-content: center;
 }
