--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,17 +1,10 @@
 
 body{
        /* background-color: #fff; */ 
-       background-color: #118ab2; 
+       background: #118ab2; 
+       transition: background 1s ease;
 }
 
-/*  .form-calendar-container{
-  background: #fff;
-  padding: 35px;
-  margin-top: 3vh;
-  margin-bottom: 5vh;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px 0px #000;
-} */
 
 #map{
   width: 100%;
@@ -31,6 +24,16 @@ h1{
   font-size: 40px;
 }
 
+h2 {
+  color: #fff;
+  font-size: 90px;
+  text-align: center;
+  width: 100%;
+  display: table-cell;
+  vertical-align: middle;
+  clear: both;
+}
+
 h3{
   text-align: center;
   color: #fff;
@@ -45,4 +48,16 @@ h3{
 .grafica{
   display: flex;
   justify-content: center;
+}
+
+.content {
+  display: table;
+  height: 100%;
+  width: 100%;
+}
+
+* {
+  box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
